--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-*{
-    padding: 0;
-    margin: 0;
-}
-
 body{
     height: 100vh;
 }
@@ -11,16 +6,42 @@ body{
     display: flex;
     justify-content: center;
     grid-column: 1/4;
+    grid-row: 2/3;
 }
 
 #game{
     display: grid;
     flex-direction: column;
     justify-content: center;
-    grid-template-rows: 10fr 1fr;
+    grid-template-rows: 1fr 10fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
 #next{
+    grid-row: 3/4;
+    grid-column: 2/3;
+}
 
+#play{
+    grid-row: 3/4;
+    grid-column: 1/2;
+}
+
+#reset{
+    grid-row: 3/4;
+    grid-column: 3/4;
+}
+
+#population{
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+#generation{
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+
+h1{
+    text-align: center;
 }
