--- a/style.css
+++ b/style.css
@@ -35,11 +35,13 @@ body{
 #population{
     grid-column: 1/2;
     grid-row: 1/2;
+    text-align: center;
 }
 
 #generation{
     grid-column: 3/4;
     grid-row: 1/2;
+    text-align: center;
 }
 
 h1{
